--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 	},
 	"dependencies": {
 		"lucide-react": "^0.336.0",
-		"next": "14.1.0",
+		"next": "14.2.5",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"sharp": "^0.33.5"
 	},
 	"devDependencies": {
 		"@catppuccin/tailwindcss": "^0.1.6",
